--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -37,3 +37,20 @@
 .sizes-container .sizeBtn{display:flex;align-items:center;justify-content:center;width:25px;height:25px;border-radius:4px;cursor:pointer;background-color:#ccc;font-size:.7rem;font-weight:600;font-family:'Raleway';}
 .sizes-container .sizeRadioBtn{display:none;}
 .sizes-container .sizeRadioBtn:checked + .sizeBtn{background-color:#db4444;color:#fff;border:2px solid #000;}
+.buy-now-container{margin:30px 0 0;}
+.buy-now-flex{display:flex;align-items:center;gap:0 30px;}
+.buy-now button{padding:10px 50px;font-family:'Inter';font-weight:500;color:#fff;border:none;border-radius:4px;background-color: #db4444;font-size:1rem;}
+.add-to-wishlist button{padding:7px;border:1px solid #db4444;border-radius:4px;background-color:#fff;}
+.add-to-wishlist button i{font-size:1.5rem;color:#db4444;}
+.quantity-btn-container{display:none;align-items:center;}
+.quantity-btn-container :is(button,span){height:40px;display:flex;align-items:center;justify-content:center;}
+.quantity-btn-container button{padding:10px;border:1px solid #db4444;}
+.quantity-btn-container button i{font-size:1rem;color:#db4444;}
+.quantity-btn-container span{padding:0 30px;font-size:1rem;font-weight:500;border:1px solid #db4444;border-width:1px 0 1px 0;width:80px;color:#db4444;}
+.quantity-btn-container button:first-child{border-radius:4px 0 0 4px;}
+.quantity-btn-container button:last-child{border-radius:0 4px 4px 0;}
+.quantity-btn-container button{background-color:#fff;}
+.quantity-btn-container button:focus{background-color:#db4444;}
+.quantity-btn-container button:focus i{color:#fff;}
+.buy-now-btn.hide{display:none;}
+.quantity-btn-container.show{display:flex;}
