--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -19,7 +19,7 @@
                             </div>
                         </div>
                         <div class="cart-description">
-                            <div class="cart-name-card">
+                            <div class="cart-name-card" [routerLink]="['/product/', cart.id]">
                                 <div class="cart-name">
                                     <p>{{cart.name}}</p>
                                 </div>
