--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -111,6 +111,24 @@
                             </div>
                         </div>
                     </div>
+                    <div class="delivery-return-container">
+                        <div class="delivery-return-box">
+                            <div class="delivery-box">
+                                <span><i class="fa-solid fa-truck-fast"></i></span>
+                                <div class="delivery-note">
+                                    <p>Free Delivery</p>
+                                    <p>Enter your postal code for Delivery Availability</p>
+                                </div>
+                            </div>
+                            <div class="return-box">
+                                <span><i class="fa-solid fa-arrows-rotate"></i></span>
+                                <div class="return-note">
+                                    <p>Return Delivery</p>
+                                    <p>Free 30 Days Delivery Returns. <span style="text-decoration:underline;">Details</span></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
