--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -77,4 +77,11 @@
     <div class="copyright-head">
         <p><i class="fa-regular fa-copyright"></i> Copyright Rimel {{currentYear}}. All Right Reserved</p>
     </div>
+    <div class="developer-contact">
+        <p>Developed By ALABI QUDUS</p>
+        <ul>
+            <li><a href="https://github.com/Abolore200" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+            <li><a href="https://linkedin.com/in/qudus-alabi" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+        </ul>
+    </div>
 </div>
