updated home routerLink

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -31,11 +31,11 @@
                     <p>Account</p>
                     <div class="account-col foot-col-flex">
                         <ul>
-                            <li><a [routerLink]="'home'">My Account</a></li>
-                            <li><a [routerLink]="'home'">Login / Register</a></li>
-                            <li><a [routerLink]="'home'">Cart</a></li>
-                            <li><a [routerLink]="'home'">Wishlist</a></li>
-                            <li><a [routerLink]="'home'">Shop</a></li>
+                            <li><a [routerLink]="''">My Account</a></li>
+                            <li><a [routerLink]="''">Login / Register</a></li>
+                            <li><a [routerLink]="''">Cart</a></li>
+                            <li><a [routerLink]="''">Wishlist</a></li>
+                            <li><a [routerLink]="''">Shop</a></li>
                         </ul>
                     </div>
                 </div>
@@ -45,10 +45,10 @@
                     <p>Quick Link</p>
                     <div class="quicklink-col foot-col-flex">
                         <ul>
-                            <li><a [routerLink]="'home'">Privacy Policy</a></li>
-                            <li><a [routerLink]="'home'">Terms Of Use</a></li>
-                            <li><a [routerLink]="'home'">FAQ</a></li>
-                            <li><a [routerLink]="'home'">Contact</a></li>
+                            <li><a [routerLink]="''">Privacy Policy</a></li>
+                            <li><a [routerLink]="''">Terms Of Use</a></li>
+                            <li><a [routerLink]="''">FAQ</a></li>
+                            <li><a [routerLink]="''">Contact</a></li>
                         </ul>
                     </div>
                 </div>
