--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -29,7 +29,7 @@
         <div class="menu-headers">
           <div class="menu-category" #removeNavBar [ngClass]="hideMenu ? 'absolute' : ''">
             <ul>
-              <li><a (click)="hideNavBar()" [routerLink]="'home'" [routerLinkActive]="'activeLink'">Home</a></li>
+              <li><a (click)="hideNavBar()" [routerLinkActiveOptions]="{exact:true}" [routerLink]="''" [routerLinkActive]="'activeLink'">Home</a></li>
               <li><a>Contact</a></li>
               <li><a>About</a></li>
               <li><a (click)="hideNavBar()" [routerLink]="'signup'" [routerLinkActive]="'activeLink'">Sign Up</a></li>
