--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -258,4 +258,51 @@
             </div>
         </div>
     </div>
+    <div class="featured-products-container product-flex-container">
+        <div class="featured-head product-head">
+            <div class="featured-box product-box"></div>
+            <span>Featured</span>
+        </div>
+        <div class="featured-product product-header">
+            <span>New Arrival</span>
+        </div>
+        <div class="featured-flex">
+            <div class="featured-box-flex featured-box-1">
+                <div class="bg-image-box-1 bg-featured">
+                    <div class="bg-image-flex">
+                        <p>PlayStation 5</p>
+                        <p>Black and White version of the PS5 coming out on sale.</p>
+                        <a href="">Shop Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="featured-box-flex featured-box-2">
+                <div class="bg-image-box-2 bg-featured">
+                    <div class="bg-image-flex">
+                        <p>Women's Collections</p>
+                        <p>Featured woman collections that give you another vibe.</p>
+                        <a href="">Shop Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="featured-box-flex featured-box-3">
+                <div class="bg-image-box-3 bg-featured">
+                    <div class="bg-image-flex">
+                        <p>Speakers</p>
+                        <p>Amazon wireless speakers</p>
+                        <a href="">Shop Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="featured-box-flex featured-box-4">
+                <div class="bg-image-box-4 bg-featured">
+                    <div class="bg-image-flex">
+                        <p>Perfume</p>
+                        <p>GUCCI INTENSE OUD EDP</p>
+                        <a href="">Shop Now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
