added featured section in home component

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,7 +7,7 @@
     <div class="login-header">
         <div class="login-card">
             <div class="login-head">
-                <p>Login to aboShopify</p>
+                <p>Login to aboMart</p>
                 <span>Enter your details below</span>
             </div>
             <div class="login-form">
@@ -63,7 +63,7 @@
                             (click)="loginAccount()"
                             type="submit" 
                             [ngStyle]="{backgroundColor: passwordInput == '' ||  emailInput == '' ? '#ed8e86' : '#EA4335'}"
-                            [disabled]="passwordInput == '' || emailInput == ''">Create Account</button>
+                            [disabled]="passwordInput == '' || emailInput == ''">Login</button>
                             <button>Forgot Password?</button>
                         </div>
                     </div>
