--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -305,4 +305,35 @@
             </div>
         </div>
     </div>
+    <div class="bottom-icon-container">
+        <div class="icon-bottom-flex">
+            <div class="delivery-card card-flex-bm">
+                <div class="bottom-card-icon">
+                    <span><i class="fa-solid fa-truck"></i></span>
+                </div>
+                <div class="bottom-card-note">
+                    <p>free and fast delivery</p>
+                    <span>free delivery for all orders over &#x20A6;140</span>
+                </div>
+            </div>
+            <div class="customer-card card-flex-bm">
+                <div class="bottom-card-icon">
+                    <span><i class="fa-solid fa-headphones"></i></span>
+                </div>
+                <div class="bottom-card-note">
+                    <p>24/7 customer service</p>
+                    <span>friendly 24/7 customer support</span>
+                </div>
+            </div>
+            <div class="guarantee-card card-flex-bm">
+                <div class="bottom-card-icon">
+                    <span><i class="fa-solid fa-shield"></i></span>
+                </div>
+                <div class="bottom-card-note">
+                    <p>money back gurantee</p>
+                    <span>we reurn money within 30 days</span>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
