--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -74,7 +74,7 @@
                         </div>
                         <div class="total-price-container">
                             <span>Total</span>
-                            <span>&#x20A6;{{totalAmountOfCart}}</span>
+                            <span>{{totalAmount}}</span>
                         </div>
                         <div class="proceed-btn-container">
                             <button type="button">Proceed To Checkout</button>
