updated font size for form input

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,6 +15,7 @@
                     <div class="form-input" hidden>
                         <label for="name">
                             <input
+                            id="name"
                             autocomplete="off" 
                             type="text" 
                             placeholder="Name" 
@@ -28,6 +29,7 @@
                     <div class="form-input">
                         <label for="email">
                             <input
+                            id="email"
                             autocomplete="off" 
                             type="text" 
                             placeholder="Email or Phone Number" 
@@ -46,6 +48,7 @@
                                 [ngClass]="showPassword ? 'fa-solid fa-eye-slash' : 'fa-solid fa-eye'"></i>
                             </span>
                             <input 
+                            id="password"
                             type="password" 
                             #password 
                             placeholder="Password" 
