--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,8 @@ body,html{font-family:'Poppins';scroll-behavior:smooth;}
 *{scroll-behavior:smooth;}
 input:not([type="radio"],[type="checkbox"]){-webkit-border-radius:0;border-radius:0;-webkit-appearance:none;appearance:none;}
 * button{color:#000;}
+i{transition:all .5s ease-in-out;}
+
+@media screen and (max-width:768px) {
+    input[type="text"],input[type="email"],input[type="password"]{font-size:1rem;}
+}
