--- a/src/styles.css
+++ b/src/styles.css
@@ -9,5 +9,6 @@ input:not([type="radio"],[type="checkbox"]){-webkit-border-radius:0;border-radiu
 i{transition:all .5s ease-in-out;}
 
 @media screen and (max-width:768px) {
-    input[type="text"],input[type="email"],input[type="password"]{font-size:1rem;}
+    input[type="text"],input[type="email"],input[type="password"],button{font-size:1rem;}
+    i{font-size:1.3rem;}
 }
