--- a/src/app/wishlist/wishlist.component.css
+++ b/src/app/wishlist/wishlist.component.css
@@ -40,4 +40,5 @@
 
 @media screen and (max-width:768px) {
     .flashsale-products{gap:35px 10px;grid-template-columns:repeat(auto-fill,minmax(calc(250px / 2),1fr));}
+    .empty-wishlist-card p{font-size:2rem;}
 }
