--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -7,7 +7,10 @@
                 </p>
             </div>
             <div class="move-btn-header">
-                <button type="button">Move All To Bag</button>
+                <button 
+                type="button" 
+                [disabled]="products.length === 0" 
+                [ngClass]="products.length === 0 ? 'disabled' : '' ">Move All To Bag</button>
             </div>
         </div>
         <div *ngIf="noOfWishlist === 0" class="empty-wishlist-card">
