--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -4,7 +4,7 @@
 .fixed-body p{text-align:center;font-size:1rem;font-family:'Inter';}
 .fixed-body p span{font-weight:600;}
 .header-container.padding{padding-top:50px;}
-.fixed-container{animation:animate .2s forwards ease-in-out;}
+.fixed-container{animation:animate .2s forwards ease-in-out;transform:translateY(-100px);}
 .header{background-color:#000;padding:10px 0px;}
 .headnote{display:flex;align-items:center;justify-content:center;}
 .headnote p{color:#fafafa;text-align:center;display:flex;align-items:center;justify-content:center;font-size:.85rem;}
@@ -37,6 +37,9 @@
 .menu-headers{display:flex;align-items:center;gap:0 100px;}
 .menu-logo button{display:none;}
 
+@media screen and (min-width:1024px) {
+    .menu-headers{gap:0 200px;}
+}
 
 @media screen and (max-width:768px) {
     .menu-icon-header{padding-right:20px;position:relative;}
@@ -68,6 +71,6 @@
 }
 
 @keyframes animate{
-    0%{top:-100px;}
-    100%{top:0px;}
+    0%{transform:translateY(-100px);}
+    100%{transform:translateY(0px);}
 }
