--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -75,7 +75,6 @@
 .product-rating ul li{list-style:none;}
 .product-rating ul li i{color:#ffad33;font-size:1rem;}
 .product-image-card{position:relative;overflow-y:hidden;}
-.product-image-card:hover .add-to-cart-btn{visibility:visible;}
 .add-to-cart-btn{position:absolute;bottom:0;border:none;cursor:pointer;}
 .category-flex{margin:50px 0 0;}
 .category-flex ul{display:grid;gap:20px;grid-template-columns:repeat(auto-fill,minmax(120px,1fr));}
@@ -90,11 +89,10 @@
 .quantity-btn-container button{background-color:#fff;box-shadow:0px 0px 5px 1px #fff;}
 .quantity-btn-container button{padding:5px 8px;font-weight:500;font-family:'Inter';font-size:1rem;border:none;border-radius:4px;cursor:pointer;}
 .quantity-btn-container span{color:#fff;font-size:1rem;cursor:pointer;font-family:'Inter';font-weight:500;}
-.add-to-cart-btn.hide{display:block;}
+.add-to-cart-btn.hide{display:none;}
 .quantity-btn-container.show{display:flex;}
-.add-to-cart-btn{display:none;opacity:0;}
-.product-image-card:hover .add-to-cart-btn{display:block;opacity:1;}
-.add-to-cart-btn{animation:animatebtn .2s ease-in-out forwards;}
+.add-to-cart-btn{opacity:0;transition:all .2s ease-in-out;transform:translateY(50px);}
+.product-image-card:hover .add-to-cart-btn{opacity:1;transform:translateY(0);}
 .featured-flex{margin:50px 0 0;}
 .featured-flex{display:grid;gap:10px;grid-template-columns:repeat(4,1fr);grid-template-rows:repeat(2,250px);}
 .featured-box-flex{border-radius:4px;}
@@ -123,12 +121,6 @@
 .bottom-card-note{display:flex;flex-direction:column;gap:0;align-items:center;}
 .bottom-card-note p{text-transform:uppercase;font-weight:600;}
 .bottom-card-note span{font-size:.8rem;color:#000;}
-
-
-@keyframes animatebtn {
-    0%{bottom:-50px;}
-    100%{bottom:0px;}
-}
 @media screen and (max-width:768px){
     .hero-section-container{flex-direction:column;width:100%;}
     .side-menu-container{border-right:none;grid-template-columns:initial;padding:0px;background-color:#000;}
