--- a/src/app/wishlist/wishlist.component.css
+++ b/src/app/wishlist/wishlist.component.css
@@ -35,8 +35,7 @@
 .for-you-products-container :is(.product-box){width:20px;height:40px;border-radius:4px;background-color:#db4444;}
 .for-you-products-container :is(.product-head span){font-weight:600;}
 .for-you-products-container{margin-top:50px;}
-.move-btn-header button[disabled]{background-color:light-dark(rgba(239, 239, 239, 0.3), rgba(19, 1, 1, 0.3));border:1px solid light-dark(rgba(118, 118, 118, 0.3), rgba(195, 195, 195, 0.3));color:light-dark(rgba(16, 16, 16, 0.3), rgba(255, 255, 255, 0.3));}
-
+.move-btn-header :is(button:disabled, button[disabled]){background-color:light-dark(rgba(239, 239, 239, 0.3), rgba(19, 1, 1, 0.3));border:1px solid light-dark(rgba(118, 118, 118, 0.3), rgba(195, 195, 195, 0.3));color:light-dark(rgba(16, 16, 16, 0.3), rgba(255, 255, 255, 0.3));}
 @media screen and (max-width:768px) {
     .flashsale-products{gap:35px 10px;grid-template-columns:repeat(auto-fill,minmax(calc(250px / 2),1fr));}
     .empty-wishlist-card p{font-size:2rem;}
