--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -70,6 +70,9 @@
                             <button>Forgot Password?</button>
                         </div>
                     </div>
+                    <div class="form-input login">
+                        <p>Already have an account? &nbsp; <span class="login-link"><a [routerLink]="'/signup'">Signup</a></span></p>
+                    </div>
                 </div>
             </div>
         </div>
