--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -66,7 +66,7 @@
                         </div>
                         <div class="subtotal-container">
                             <span>Subtotal</span>
-                            <span>&#x20A6;0000</span>
+                            <span>{{totalAmount}}</span>
                         </div>
                         <div class="shipping-container">
                             <span>Shipping</span>
