--- a/src/app/cart/checkout/checkout.component.html
+++ b/src/app/cart/checkout/checkout.component.html
@@ -1,1 +1,82 @@
-<p>checkout works!</p>
+<div class="checkout-container">
+    <div class="checkout-container-div">
+        <div class="checkout-header-name">
+            <p><span>Cart&nbsp;/</span>&nbsp;Checkout</p>
+        </div>
+        <div class="billing-details-head">
+            <p>Billing Details</p>
+        </div>
+        <div class="form-checkout-div">
+            <div class="form-container">
+                <div class="form-checkout-flex formGroup">
+                    <div class="checkout-form-container">
+                        <div class="form">
+                            <div class="fname input-text">
+                                <label for="fname">First Name</label>
+                                <input type="text" id="fname">
+                            </div>
+                            <div class="company-name input-text">
+                                <label for="company-name">Company Name</label>
+                                <input type="text" id="company-name">
+                            </div>
+                            <div class="address input-text">
+                                <label for="address">Street Address</label>
+                                <input type="text" id="address">
+                            </div>
+                            <div class="apartment input-text">
+                                <label for="apartment">Apartment, floor, etc. (optional)</label>
+                                <input type="text" id="apartment">
+                            </div>
+                            <div class="town input-text">
+                                <label for="town">Town/City</label>
+                                <input type="text" id="town">
+                            </div>
+                            <div class="phone input-text">
+                                <label for="phone">Phone Number</label>
+                                <input type="text" id="phone">
+                            </div>
+                            <div class="email input-text">
+                                <label for="email">Email Address</label>
+                                <input type="email" id="email">
+                            </div>
+                            <div class="save-checkbox">
+                                <input type="checkbox" name="saveCheckout" id="checkbox">
+                                <label for="checkbox">Save this information for faster check-out next time</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="checkout-cart-container">
+                        <div class="checkout-cart-flex">
+                            <div class="product-div" *ngFor="let product of products">
+                                <div class="product-image">
+                                    <img [src]="product.image" [alt]="product.name">
+                                </div>
+                                <div class="product-description">
+                                    <p class="product-name">{{product.name}}</p>
+                                    <p class="product-price">&#x20A6;{{product.price}}</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="total-checkout-container">
+                            <div class="subtotal total-checkout">
+                                <p>Subtotal:</p>
+                                <p>{{totalAmount}}</p>
+                            </div>
+                            <div class="shipping total-checkout">
+                                <p>Shipping:</p>
+                                <p>Free</p>
+                            </div>
+                            <div class="total total-checkout">
+                                <p>Total:</p>
+                                <p>{{totalAmount}}</p>
+                            </div>
+                        </div>
+                        <div class="place-order-btn">
+                            <button type="submit">Place Order</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
