--- a/src/app/cart/checkout/checkout.component.css
+++ b/src/app/cart/checkout/checkout.component.css
@@ -6,7 +6,7 @@
 .form-checkout-div{margin:30px 0 0;}
 .form-checkout-flex{display:flex;gap:0 20px;}
 .checkout-form-container,.checkout-cart-container{width:100%;}
-.checkout-cart-container :is(.checkout-cart-flex,.total-checkout-container,.place-order-btn){width:70%;}
+.checkout-cart-container :is(.checkout-cart-flex,.total-checkout-container,.bank-delivery-container,.place-order-btn){width:70%;}
 .form{display:flex;flex-direction:column;width:100%;gap:20px 0;}
 .form .input-text{display:flex;flex-direction:column;gap:5px 0;}
 .form :is(.input-text label){font-size:.8rem;color:#999999;}
@@ -27,14 +27,21 @@
 .total-checkout-container .total-checkout{padding:10px 0;}
 .total-checkout-container .total-checkout{display:flex;align-items:center;justify-content:space-between;border-bottom:1px solid #999999;}
 .total-checkout-container .total-checkout:last-child{border-bottom:none;}
-.total-checkout-container .total-checkout p:last-child{font-weight:500;font-family:'Raleway';}
+.total-checkout-container .total-checkout p:last-child{font-weight:600;font-family:'Raleway';}
 .place-order-btn{margin:40px 0 0;}
 .place-order-btn button{padding:15px 0;border:none;background-color:#db4444;border-radius:4px;width:100%;}
 .place-order-btn button{font-weight:500;font-family:'Inter';font-size:.9rem;color:#fff;}
+.bank-delivery-container{margin:30px 0 0;display:flex;flex-direction:column;gap:10px 0;}
+.bank-delivery-container .bank-delivery,.bank-radio{display:flex;align-items:center;gap:0 10px;}
+.bank-delivery-container .bank{justify-content:space-between;}
+/* .bank-image */
 
 
 
 
 @media screen and (max-width:768px) {
     .form :is(.input-text input){font-size:1rem;}
+    .form-checkout-flex{flex-direction:column;gap:20px 0;}
+    .form :is(.input-text input){width:100%;}
+    .checkout-cart-container :is(.checkout-cart-flex, .total-checkout-container,.bank-delivery-container, .place-order-btn){width:100%;}
 }
