--- a/src/app/cart/checkout/checkout.component.html
+++ b/src/app/cart/checkout/checkout.component.html
@@ -71,6 +71,21 @@
                                 <p>{{totalAmount}}</p>
                             </div>
                         </div>
+                        <div class="bank-delivery-container">
+                            <div class="bank bank-delivery">
+                                <div class="bank-radio">
+                                    <input type="radio" name="payment" id="bank" checked>
+                                    <label for="bank">Bank</label>
+                                </div>
+                                <div class="bank-image">
+                                    <img src="assets/images/bank.svg" alt="bank">
+                                </div>
+                            </div>
+                            <div class="delivery bank-delivery">
+                                <input type="radio" name="payment" id="delivery">
+                                <label for="delivery">Delivery</label>
+                            </div>
+                        </div>
                         <div class="place-order-btn">
                             <button type="submit">Place Order</button>
                         </div>
